--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -1,3 +1,74 @@
 {
-    "home_page":"الصفحة الرئيسية"
+    "Settings":"الاعدادات",
+    "App Theme":"سمة التطبيق",
+    "Light":"ابيض",
+    "Dark":"مظلم",
+    "Language":"لغة",
+    "Arabic":"عربي",
+    "English":"انجليزي",
+    "Edit Profile":"تعديل الملف الشخصي",
+    "Hotel Reservations":"الحجوزات",
+    "Information":"معلومات",
+    "Logout":"تسجيل الخروج",
+    "My Profile":"الملف الشخصي",
+    "Nearby":"بالقرب منك",
+    "FayTour":"فايتور",
+    "FayTour Community":"مجتمع فايتور",
+    "Favourites":"المفضلة",
+    "Plans":"خطط",
+    "Recommendations":"التوصيات",
+    "Top Rated Places":"الأماكن الأعلى تقييماً",
+    "Top Rated Hotels":"الفنادق الأعلى تقييماً",
+    "Torism Places":"الأماكن السياحية",
+    "Hotels":"الفنادق",
+    "See More":"المزيد",
+    "Islamic antiquities":"الآثار الإسلامية",
+    "Coptic antiquities":"الآثار القبطية",
+    "Greek and Roman Antiquities":"الآثار الرومانية",
+    "Pharaonic antiquities":"الاثار الفرعونية",
+    "Next":"التالي",
+    "Go to it!":"إذهب إليه!",
+    "Reserve!":"احجزه!",
+    "Rate it !!":"اعطي تقييم!!",
+    "Get Nearest Places!":"احصل على الأماكن القريبة منك!",
+    "Reservation":"الحجوزات",
+    "Nothing Yet":"لا يوجد حجوزات حتى الان",
+    "Nothing Yet fav":"لا يوجد تفضيلات حتى الان",
+    "Phone Number":"رقم التليفون",
+    "Please enter your phone number":"يرجى إدخال رقم الهاتف الخاص بك",
+    "Check-In":"تاريخ الذهاب",
+    "Check-Out":"تاريخ العودة",
+    "Adults":" الكبار",
+    " Adult":" الكبار",
+    "Kids":" ألاطفال",
+    " Kid":" ألاطفال",
+    "Pay!":"الدفع!",
+    "Submit!":"حجز!",
+    "Reservation for":"الحجز لـ",
+    "and":"و",
+    "Request Time":"وقت الطلب",
+    "   write your offer now!   ":"   اكتب عرضك الآن!   ",
+    "   Write your post now!   ":"   بما تفكر الآن!   ",
+    "Comments":"تعليق",
+    "Comment":"تعليق",
+    "Like":"اعجبني",
+    "Liked":"اعجبني",
+    "Write a comment...":"اكتب تعليق...",
+    "Create Post":"اضافة منشور",
+    "Edit Post":"تعديل المنشور",
+    "Write your post now!":"اكتب منشورك الان!",
+    "Post":"نشر",
+    "Update":"تعديل",
+    "Your email":"اكتب الاميل",
+    "Your password":"اكتب الباسورد",
+    "Your name":"اكتب الاسم",
+    "dontHaveAccount": "ليس لديك حساب؟ ",
+    "alreadyHaveAccount" :"هل لديك حساب؟ ",
+    "SIGN IN":"تسجيل الدخول",
+    "Sign In":"تسجيل الدخول",
+    "SIGN UP":"انشاء حساب",
+    "Sign Up":"انشاء حساب",
+    "Please Write Something!":"من فضلك اكتب شيئا!",
+    "Not Found!": "غير موجود!",
+    "Search...":"ابحث..."
 }
