--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -1,3 +1,76 @@
 {
-    "home_page":"Home Page"
+    "Settings":"Settings",
+    "App Theme":"App Theme",
+    "Light":"Light",
+    "Dark":"Dark",
+    "Language":"Language",
+    "Arabic":"Arabic",
+    "English":"English",
+    "Edit Profile":"Edit Profile",
+    "Hotel Reservations":"Hotel Reservations",
+    "Information":"Information",
+    "Logout":"Logout",
+    "My Profile":"My Profile",
+    "Nearby":"Nearby",
+    "FayTour":"FayTour",
+    "FayTour Community":"FayTour Community",
+    "Favourites":"Favourites",
+    "Plans":"Plans",
+    "Recommendations":"Recommendations",
+    "Top Rated Places":"Top Rated Places",
+    "Top Rated Hotels":"Top Rated Hotels",
+    "Torism Places":"Torism Places",
+    "Hotels":"Hotels",
+    "See More":"See More",
+    "Islamic antiquities":"Islamic antiquities",
+    "Coptic antiquities":"Coptic antiquities",
+    "Greek and Roman Antiquities":"Greek and Roman",
+    "Pharaonic antiquities":"Pharaonic antiquities",
+    "Next":"Next",
+    "Go to it!":"Go to it!",
+    "Reserve!":"Reserve!",
+    "Rate it !!":"Rate it !!",
+    "Get Nearest Places!":"Get Nearest Places!",
+    "Reservation":"Reservation",
+    "Nothing Yet":"Nothing Yet",
+    "Nothing Yet fav":"Nothing Yet",
+    "Phone Number":"Phone Number",
+    "Please enter your phone number":"Please enter your phone number",
+    "Check-In":"Check-In",
+    "Check-Out":"Check-Out",
+    "Adults":"Adults",
+    " Adult":" Adult",
+    "Kids":"Kids",
+    " Kid":" Kid",
+    "Pay!":"Pay!",
+    "Submit!":"Submit!",
+    "Reservation for":"Reservation for",
+    "and":"and",
+    "Request Time":"Request Time",
+    "   write your offer now!   ":"   write your offer now!   ",
+    "   Write your post now!   ":"   Write your post now!   ",
+    "Comments":"Comments",
+    "Comment":"Comment",
+    "Like":"Like",
+    "Liked":"Liked",
+    "Write a comment...":"Write a comment...",
+    "Create Post":"Create Post",
+    "Edit Post":"Edit Post",
+    "Write your post now!":"Write your post now!",
+    "Post":"Post",
+    "Update":"Update",
+    "Your email":"Your email",
+    "Your password":"Your password",
+    "Your name":"Your name",
+    "dontHaveAccount": "Don’t have an Account? ",
+    "alreadyHaveAccount" :"Already have an Account? ",
+    "SIGN IN":"SIGN IN",
+    "Sign In":"Sign In",
+    "SIGN UP":"SIGN UP",
+    "Sign Up":"Sign Up",
+    "Please Write Something!":"Please Write Something!",
+    "Not Found!": "Not Found!",
+    "Search...":"Search..."
+
+    
 }
