--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -70,7 +70,7 @@
     "Sign Up":"Sign Up",
     "Please Write Something!":"Please Write Something!",
     "Not Found!": "Not Found!",
-    "Search...":"Search..."
-
-    
+    "Search...":"Search...",
+    "Photo Library":"Photo Library",
+    "Camera":"Camera"
 }
