--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -72,5 +72,7 @@
     "Not Found!": "غير موجود!",
     "Search...":"ابحث...",
     "Photo Library":"معرض الصور",
-    "Camera":"الكاميرا"
+    "Camera":"الكاميرا",
+    "EDIT NAME":"تعديل الاسم",
+    "EDIT PASSWORD":"تعديل الباسورد"
 }
