--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -1,78 +1,110 @@
 {
-    "Settings":"الاعدادات",
-    "App Theme":"سمة التطبيق",
-    "Light":"ابيض",
-    "Dark":"مظلم",
-    "Language":"لغة",
-    "Arabic":"عربي",
-    "English":"انجليزي",
-    "Edit Profile":"تعديل الملف الشخصي",
-    "Hotel Reservations":"الحجوزات",
-    "Information":"معلومات",
-    "Logout":"تسجيل الخروج",
-    "My Profile":"الملف الشخصي",
-    "Nearby":"بالقرب منك",
-    "FayTour":"فايتور",
-    "FayTour Community":"مجتمع فايتور",
-    "Favourites":"المفضلة",
-    "Plans":"خطط",
-    "Recommendations":"التوصيات",
-    "Top Rated Places":"الأماكن الأعلى تقييماً",
-    "Top Rated Hotels":"الفنادق الأعلى تقييماً",
-    "Torism Places":"الأماكن السياحية",
-    "Hotels":"الفنادق",
-    "See More":"المزيد",
-    "Islamic antiquities":"الآثار الإسلامية",
-    "Coptic antiquities":"الآثار القبطية",
-    "Greek and Roman Antiquities":"الآثار الرومانية",
-    "Pharaonic antiquities":"الاثار الفرعونية",
-    "Next":"التالي",
-    "Go to it!":"إذهب إليه!",
-    "Reserve!":"إحجز فيه!",
-    "Rate it !!":"قيّم المكان!!",
-    "Get Nearest Places!":"احصل على الأماكن القريبة منك!",
-    "Reservation":"الحجوزات",
-    "Nothing Yet":"لا يوجد حجوزات حتى الان",
-    "Nothing Yet fav":"لا يوجد تفضيلات حتى الان",
-    "Phone Number":"رقم التليفون",
-    "Please enter your phone number":"يرجى إدخال رقم الهاتف الخاص بك",
-    "Check-In":"تاريخ الذهاب",
-    "Check-Out":"تاريخ العودة",
-    "Adults":" الكبار",
-    " Adult":" الكبار",
-    "Kids":" ألاطفال",
-    " Kid":" ألاطفال",
-    "Pay!":"الدفع!",
-    "Submit!":"حجز!",
-    "Reservation for":"الحجز لـ",
-    "and":"و",
-    "Request Time":"وقت الطلب",
-    "   write your offer now!   ":"   اكتب عرضك الآن!   ",
-    "   Write your post now!   ":"   بما تفكر الآن!   ",
-    "Comments":"تعليق",
-    "Comment":"تعليق",
-    "Like":"اعجبني",
-    "Liked":"اعجبني",
-    "Write a comment...":"اكتب تعليق...",
-    "Create Post":"اضافة منشور",
-    "Edit Post":"تعديل المنشور",
-    "Write your post now!":"اكتب منشورك الان!",
-    "Post":"نشر",
-    "Update":"تعديل",
-    "Your email":"اكتب الاميل",
-    "Your password":"اكتب الباسورد",
-    "Your name":"اكتب الاسم",
-    "dontHaveAccount": "ليس لديك حساب؟ ",
-    "alreadyHaveAccount" :"هل لديك حساب؟ ",
-    "SIGN IN":"تسجيل الدخول",
-    "Sign In":"تسجيل الدخول",
-    "SIGN UP":"انشاء حساب",
-    "Sign Up":"انشاء حساب",
-    "Please Write Something!":"من فضلك اكتب شيئا!",
-    "Not Found!": "غير موجود!",
-    "Search...":"ابحث...",
-    "Photo Library":"معرض الصور",
-    "Camera":"الكاميرا",
-    "EDIT NAME":"تعديل الاسم",
-    "EDIT PASSWORD":"تعديل الباسورد"
+  "Settings": "الإعدادات",
+  "App Theme": "سمة التطبيق",
+  "Light": "أبيض",
+  "Dark": "مظلم",
+  "Language": "لغة التطبيق",
+  "Arabic": "عربي",
+  "English": "انجليزي",
+  "Edit Profile": "تعديل الملف الشخصي",
+  "Hotel Reservations": "الحجوزات",
+  "Information": "معلومات",
+  "Logout": "تسجيل الخروج",
+  "My Profile": "الملف الشخصي",
+  "Nearby": "بالقرب منك",
+  "FayTour": "فايتور",
+  "FayTour Community": "مجتمع فايتور",
+  "Favourites": "المفضلة",
+  "Plans": "خطط للرحلات",
+  "Recommendations": "التوصيات",
+  "Top Rated Places": "الأماكن الأعلى تقييماً",
+  "Top Rated Hotels": "الفنادق الأعلى تقييماً",
+  "Torism Places": "الأماكن السياحية",
+  "Hotels": "الفنادق",
+  "See More": "المزيد",
+  "Islamic antiquities": "الآثار الإسلامية",
+  "Coptic antiquities": "الآثار القبطية",
+  "Greek and Roman Antiquities": "الآثار الرومانية",
+  "Pharaonic antiquities": "الاثار الفرعونية",
+  "Next": "التالي",
+  "Go to it!": "إذهب إليه!",
+  "Reserve!": "إحجز فيه!",
+  "Rate it !!": "قيّم المكان!!",
+  "Get Nearest Places!": "ابحث عن الأماكن القريبة منك!",
+  "Reservation": "الحجوزات",
+  "Nothing Yet": "لا يوجد حجوزات حتى الان",
+  "Nothing Yet fav": "لا يوجد تفضيلات حتى الان",
+  "Phone Number": "رقم الهاتف",
+  "Please enter your phone number": "يرجى إدخال رقم الهاتف الخاص بك",
+  "Check-In": "تاريخ الوصول",
+  "Check-Out": "تاريخ المغادرة",
+  "Adults": "البالغين",
+  "adults": " بالغين",
+  " Adult": " بالغ",
+  "Kids": "الأطفال",
+  "kids": " أطفال",
+  " Kid": " طفل",
+  "Pay!": "إدفع",
+  "Submit!": "إحجز",
+  "Reservation for": "حجز لـ",
+  "and": "و",
+  "Request Time": "وقت الطلب",
+  "   write your offer now!   ": "   اكتب عرضك الآن!   ",
+  "   Write your post now!   ": "   بما تفكر الآن!   ",
+  "Comments": "التعليقات",
+  "Comment": "تعليق",
+  "Like": "إعجاب",
+  "Liked": "أعجبني",
+  "Write a comment...": "اكتب تعليق...",
+  "Create Post": "إضافة منشور",
+  "Edit Post": "تعديل المنشور",
+  "Write your post now!": "اكتب منشورك الان!",
+  "Post": "نشر",
+  "Update": "تعديل",
+  "Your email": "البريد اللإلكتروني",
+  "Your password": "كلمة المرور",
+  "Your name": "الاسم",
+  "dontHaveAccount": "ليس لديك حساب؟ ",
+  "alreadyHaveAccount": "هل لديك حساب؟ ",
+  "SIGN IN": "تسجيل الدخول",
+  "Sign In": "سجل دخول",
+  "SIGN UP": "إنشاء حساب",
+  "Sign Up": "أنشئ حسابا",
+  "Please Write Something!": "من فضلك اكتب شيئا!",
+  "Not Found!": "غير موجود!",
+  "Search...": "ابحث...",
+  "Photo Library": "معرض الصور",
+  "Camera": "الكاميرا",
+  "EDIT NAME": "تعديل الاسم",
+  "EDIT PASSWORD": "تعديل كلمة المرور",
+  "Adding Successful": "تمت الإضافة بنجاح!",
+  "Okay": "حسنًا",
+  "Thanks for Rating!": "شكراً على التقييم!",
+  "Confirm Password": "تأكيد كلمة المرور",
+  "About FayTour": "عن فايتور",
+  "info paragraph1": "تحياتنا وقبل كل شيء،\nنأمل أن يكون التطبيق قد حصل بنجاح على رضاكم التام.\n",
+  "info paragraph2": "اسمح لنا بتوضيح أن هذا التطبيق قد تم تصميمه كمشروع تخرج من كلية الحاسبات والذكاء الإصطناعي. فقد كان بمثابة ختام رائع لرحلتنا الأكاديمية في الكلية. تمحورت الفكرة الأساسية وراء هذا التطبيق حول جمع كل الوجهات السياحية الرائعة التي تقع ضمن أحضان محافظة الفيوم في أرض مصر في مكان واحد. وقد كان هدفنا الأساسي هو تعريف السياح وجميع الأشخاص من الفيوم وخارجها بهذه الأماكن الاستثنائية مع تبسيط إمكانية الوصول إليها أيضًا.\n",
+  "info paragraph3": "مما لا شك فيه، كان طموحنا القوي هو تنشيط السياحة في هذه المنطقة الساحرة. وكان أحد أهم أهدافنا في المشروع هو التركيز على العديد من المناطق السياحية غير المستغلة والمهجورة والتي تتوق إلى التجديد. وكما أصبح من الواضح أن القائمين على تطوير هذا المناطق والمحافظة عليها كانوا في حاجة ماسة إلى تطبيق ديناميكي للهاتف المحمول للسياح للمساعدة في الترويج لهذه المناطق. وستعمل مثل هذه المنصة بلا شك كأداة لا غنى عنها لنشر الإعلانات الجذابة وتعزيز الإمكانات الهائلة للسياحة في المنطقة.",
+  "Cooperation with": "بالتعاون مع",
+  "Fayoum Governorate Administration": "إدارة محافظة الفيوم",
+  "Supervised by": "تحت إشراف",
+  "Dr. Ahmed Slama": "د. أحمد سلامة",
+  "Slama Desc": "محاضر بكلية الحاسبات و الذكاء الإصطناعي بجامعة الفيوم",
+  "Developed by": "من تطوير",
+  "Eng.": "م.",
+  "Ayman Mansour": "أيمن منصور",
+  "Marwan Yasser": "مروان ياسر",
+  "Mahmoud Hamdy": "محمود حمدي",
+  "Hamada Mostafa": "حمادة مصطفى",
+  "Ahmed Abdelaltawab": "أحمد عبدالتواب",
+  "Mohammed Ramadan": "محمد رمضان",
+  "Reserve in a Hotel": "إحجز في فندق",
+  "Payment": "الدفع",
+  "Number": "رقم البطاقة",
+  "Expired Date": "تاريخ الإنتهاء",
+  "Card Holder": "اسم صاحب البطاقة",
+  "Validate": "تحقق",
+  "This feature will be available soon!": "سيتم تفعيل هذه الخاصية قريبًا!",
+  "CopyRights": "2023 FayTour . كل الحقوق محفوظة."
+
 }
