--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -1,79 +1,109 @@
 {
-    "Settings":"Settings",
-    "App Theme":"App Theme",
-    "Light":"Light",
-    "Dark":"Dark",
-    "Language":"Language",
-    "Arabic":"Arabic",
-    "English":"English",
-    "Edit Profile":"Edit Profile",
-    "Hotel Reservations":"Hotel Reservations",
-    "Information":"Information",
-    "Logout":"Logout",
-    "My Profile":"My Profile",
-    "Nearby":"Nearby",
-    "FayTour":"FayTour",
-    "FayTour Community":"FayTour Community",
-    "Favourites":"Favourites",
-    "Plans":"Plans",
-    "Recommendations":"Recommendations",
-    "Top Rated Places":"Top Rated Places",
-    "Top Rated Hotels":"Top Rated Hotels",
-    "Torism Places":"Torism Places",
-    "Hotels":"Hotels",
-    "See More":"See More",
-    "Islamic antiquities":"Islamic antiquities",
-    "Coptic antiquities":"Coptic antiquities",
-    "Greek and Roman Antiquities":"Greek and Roman",
-    "Pharaonic antiquities":"Pharaonic antiquities",
-    "Next":"Next",
-    "Go to it!":"Go to it!",
-    "Reserve!":"Reserve!",
-    "Rate it !!":"Rate it !!",
-    "Get Nearest Places!":"Get Nearest Places!",
-    "Reservation":"Reservation",
-    "Nothing Yet":"Nothing Yet",
-    "Nothing Yet fav":"Nothing Yet",
-    "Phone Number":"Phone Number",
-    "Please enter your phone number":"Please enter your phone number",
-    "Check-In":"Check-In",
-    "Check-Out":"Check-Out",
-    "Adults":"Adults",
-    " Adult":" Adult",
-    "Kids":"Kids",
-    " Kid":" Kid",
-    "Pay!":"Pay!",
-    "Submit!":"Submit!",
-    "Reservation for":"Reservation for",
-    "and":"and",
-    "Request Time":"Request Time",
-    "   write your offer now!   ":"   write your offer now!   ",
-    "   Write your post now!   ":"   Write your post now!   ",
-    "Comments":"Comments",
-    "Comment":"Comment",
-    "Like":"Like",
-    "Liked":"Liked",
-    "Write a comment...":"Write a comment...",
-    "Create Post":"Create Post",
-    "Edit Post":"Edit Post",
-    "Write your post now!":"Write your post now!",
-    "Post":"Post",
-    "Update":"Update",
-    "Your email":"Your email",
-    "Your password":"Your password",
-    "Your name":"Your name",
-    "dontHaveAccount": "Don’t have an Account? ",
-    "alreadyHaveAccount" :"Already have an Account? ",
-    "SIGN IN":"SIGN IN",
-    "Sign In":"Sign In",
-    "SIGN UP":"SIGN UP",
-    "Sign Up":"Sign Up",
-    "Please Write Something!":"Please Write Something!",
-    "Not Found!": "Not Found!",
-    "Search...":"Search...",
-    "Photo Library":"Photo Library",
-    "Camera":"Camera",
-    "EDIT NAME":"EDIT NAME",
-    "EDIT PASSWORD":"EDIT PASSWORD"
-    
+  "Settings": "Settings",
+  "App Theme": "App Theme",
+  "Light": "Light",
+  "Dark": "Dark",
+  "Language": "App Language",
+  "Arabic": "Arabic",
+  "English": "English",
+  "Edit Profile": "Edit Profile",
+  "Hotel Reservations": "Hotel Reservations",
+  "Information": "Information",
+  "Logout": "Logout",
+  "My Profile": "My Profile",
+  "Nearby": "Nearby",
+  "FayTour": "FayTour",
+  "FayTour Community": "FayTour Community",
+  "Favourites": "Favourites",
+  "Plans": "Plans",
+  "Recommendations": "Recommendations",
+  "Top Rated Places": "Top Rated Places",
+  "Top Rated Hotels": "Top Rated Hotels",
+  "Torism Places": "Torism Places",
+  "Hotels": "Hotels",
+  "See More": "See More",
+  "Islamic antiquities": "Islamic antiquities",
+  "Coptic antiquities": "Coptic antiquities",
+  "Greek and Roman Antiquities": "Greek and Roman",
+  "Pharaonic antiquities": "Pharaonic antiquities",
+  "Next": "Next",
+  "Go to it!": "Go to it!",
+  "Reserve!": "Reserve!",
+  "Rate it !!": "Rate it !!",
+  "Get Nearest Places!": "Get Nearest Places!",
+  "Reservation": "Reservations",
+  "Nothing Yet": "Nothing Yet",
+  "Nothing Yet fav": "Nothing Yet",
+  "Phone Number": "Phone Number",
+  "Please enter your phone number": "Please enter your phone number",
+  "Check-In": "Check-In",
+  "Check-Out": "Check-Out",
+  "Adults": "Adults",
+  "adults": " Adults",
+  " Adult": " Adult",
+  "Kids": "Kids",
+  "kids": " Kids",
+  " Kid": " Kid",
+  "Pay!": "Pay!",
+  "Submit!": "Submit!",
+  "Reservation for": "Reservation for",
+  "and": "and",
+  "Request Time": "Request Time",
+  "   write your offer now!   ": "   write your offer now!   ",
+  "   Write your post now!   ": "   Write your post now!   ",
+  "Comments": "Comments",
+  "Comment": "Comment",
+  "Like": "Like",
+  "Liked": "Liked",
+  "Write a comment...": "Write a comment...",
+  "Create Post": "Create Post",
+  "Edit Post": "Edit Post",
+  "Write your post now!": "Write your post now!",
+  "Post": "Post",
+  "Update": "Update",
+  "Your email": "Email",
+  "Your password": "Password",
+  "Your name": "Name",
+  "dontHaveAccount": "Don’t have an Account? ",
+  "alreadyHaveAccount": "Already have an Account? ",
+  "SIGN IN": "SIGN IN",
+  "Sign In": "Sign In",
+  "SIGN UP": "SIGN UP",
+  "Sign Up": "Sign Up",
+  "Please Write Something!": "Please Write\n Something!",
+  "Not Found!": "Not Found!",
+  "Search...": "Search...",
+  "Photo Library": "Photo Library",
+  "Camera": "Camera",
+  "EDIT NAME": "EDIT NAME",
+  "EDIT PASSWORD": "EDIT PASSWORD",
+  "Adding Successful": "Adding Successful!",
+  "Okay": "Okay",
+  "Thanks for Rating!": "Thanks for Rating!",
+  "Confirm Password": "Confirm Password",
+  "About FayTour": "About FayTour",
+  "info paragraph1": "Our Greetings and foremost, we sincerely hope that the application has successfully garnered your utmost satisfaction.\n",
+  "info paragraph2": "Allow us to elucidate that this application was conceived as the graduation project at the Faculty of Computer Science. It served as a magnificent culmination of our academic journey. The underlying concept behind this app revolved around amalgamating all the splendid tourist destinations nestled within the embrace of Fayoum Governorate in the land of Egypt. Our primary objective was to acquaint visitors and all people with these extraordinary locales while also streamlining their accessibility.\n",
+  "info paragraph3": "Unquestionably, our ardent aspiration was to invigorate the realm of tourism in this enchanting region. Our choice to embark upon this venture was primarily inspired by the focus on numerous untapped and abandoned tourist havens that yearned for rejuvenation. It also became apparent that the custodians entrusted with developing and preserving this remarkable expanse were in dire need of a dynamic mobile application for tourists. Such a platform would undoubtedly serve as an indispensable tool for disseminating captivating advertisements and diligently promoting the vast potential for tourism within this resplendent domain.",
+  "Cooperation with": "Cooperation with",
+  "Fayoum Governorate Administration": "Fayoum Governorate Administration",
+  "Supervised by": "Supervised by",
+  "Dr. Ahmed Slama": "Dr. Ahmed Slama",
+  "Slama Desc": "Lecturer at the Faculty of Computers and Artificial Intelligence, Fayoum University",
+  "Developed by": "Developed by",
+  "Eng.": "Eng.",
+  "Ayman Mansour": "Ayman Mansour",
+  "Marwan Yasser": "Marwan Yasser",
+  "Mahmoud Hamdy": "Mahmoud Hamdy",
+  "Hamada Mostafa": "Hamada Mostafa",
+  "Ahmed Abdelaltawab": "Ahmed Abdelaltawab",
+  "Mohammed Ramadan": "Mohammed Ramadan",
+  "Reserve in a Hotel": "Reserve in a Hotel",
+  "Payment": "Payment",
+  "Number": "Number",
+  "Expired Date": "Expired Date",
+  "Card Holder": "Card Holder",
+  "Validate": "Validate",
+  "This feature will be available soon!": "This feature will be available soon!",
+  "CopyRights": "2023 FayTour . All rights reserved."
 }
