--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -4,8 +4,8 @@
   "Light": "أبيض",
   "Dark": "مظلم",
   "Language": "لغة التطبيق",
-  "Arabic": "عربي",
-  "English": "انجليزي",
+  "Arabic": "العربية",
+  "English": "English",
   "Edit Profile": "تعديل الملف الشخصي",
   "Hotel Reservations": "الحجوزات",
   "Information": "معلومات",
@@ -99,6 +99,8 @@
   "Ahmed Abdelaltawab": "أحمد عبدالتواب",
   "Mohammed Ramadan": "محمد رمضان",
   "Reserve in a Hotel": "إحجز في فندق",
+  "Nothing Yet comment1":"لا توجد تعليقات حتى الان",
+  "Nothing Yet comment2":"كن أول من يعلق على هذا المنشور",
   "Payment": "الدفع",
   "Number": "رقم البطاقة",
   "Expired Date": "تاريخ الإنتهاء",
