--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -4,7 +4,7 @@
   "Light": "Light",
   "Dark": "Dark",
   "Language": "App Language",
-  "Arabic": "Arabic",
+  "Arabic": "العربية",
   "English": "English",
   "Edit Profile": "Edit Profile",
   "Hotel Reservations": "Hotel Reservations",
@@ -66,17 +66,17 @@
   "Your name": "Name",
   "dontHaveAccount": "Don’t have an Account? ",
   "alreadyHaveAccount": "Already have an Account? ",
-  "SIGN IN": "SIGN IN",
+  "SIGN IN": "Sign In",
   "Sign In": "Sign In",
-  "SIGN UP": "SIGN UP",
+  "SIGN UP": "Sign Up",
   "Sign Up": "Sign Up",
   "Please Write Something!": "Please Write\n Something!",
   "Not Found!": "Not Found!",
   "Search...": "Search...",
   "Photo Library": "Photo Library",
   "Camera": "Camera",
-  "EDIT NAME": "EDIT NAME",
-  "EDIT PASSWORD": "EDIT PASSWORD",
+  "EDIT NAME": "Edit Name",
+  "EDIT PASSWORD": "Edit Password",
   "Adding Successful": "Adding Successful!",
   "Okay": "Okay",
   "Thanks for Rating!": "Thanks for Rating!",
@@ -99,6 +99,8 @@
   "Ahmed Abdelaltawab": "Ahmed Abdelaltawab",
   "Mohammed Ramadan": "Mohammed Ramadan",
   "Reserve in a Hotel": "Reserve in a Hotel",
+  "Nothing Yet comment1":"No Comments Yet",
+  "Nothing Yet comment2":"Be the first to comment",
   "Payment": "Payment",
   "Number": "Number",
   "Expired Date": "Expired Date",
