--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -107,6 +107,7 @@
   "Card Holder": "اسم صاحب البطاقة",
   "Validate": "تحقق",
   "This feature will be available soon!": "سيتم تفعيل هذه الخاصية قريبًا!",
-  "CopyRights": "2023 FayTour . كل الحقوق محفوظة."
+  "CopyRights": "2023 FayTour . كل الحقوق محفوظة.",
+  "Status":"الحالة"
 
 }
