--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -107,5 +107,6 @@
   "Card Holder": "Card Holder",
   "Validate": "Validate",
   "This feature will be available soon!": "This feature will be available soon!",
-  "CopyRights": "2023 FayTour . All rights reserved."
+  "CopyRights": "2023 FayTour . All rights reserved.",
+  "Status":"Status"
 }
