--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -108,5 +108,7 @@
   "Validate": "Validate",
   "This feature will be available soon!": "This feature will be available soon!",
   "CopyRights": "2023 FayTour . All rights reserved.",
-  "Status":"Status"
+  "Status":"Status",
+  "Accept":"Accept",
+  "Reject":"Reject"
 }
