--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -116,6 +116,7 @@
   "QRReservation":"بيانات الحجز",
   "Yes":"نعم",
   "No":"لا",
+  "Show more":"عرض المزيد",
   "QRtitle":"باركود الحجز",
   "Are you sure to complete this process?":"هل أنت متأكد من إتمام هذه العملية؟"
 
