--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -116,6 +116,7 @@
   "QRReservation":"Reservation Data",
   "Yes":"Yes",
   "No":"No",
+  "Show more":"Show more",
   "QRtitle":"Reservation QR",
   "Are you sure to complete this process?":"Are you sure to complete this process?"
   
