--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -109,8 +109,8 @@
   "This feature will be available soon!": "This feature will be available soon!",
   "CopyRights": "2023 FayTour . All rights reserved.",
   "Status":"Status",
-  "Accept":"Accepted",
-  "Reject":"Rejected",
+  "Accept":"Accept",
+  "Reject":"Reject",
   "Get QR":"Get QR",
   "Secan QR":"Scan QR",
   "QRReservation":"Reservation Data",
