--- a/assets/languages/ar.json
+++ b/assets/languages/ar.json
@@ -25,7 +25,7 @@
   "Islamic antiquities": "الآثار الإسلامية",
   "Coptic antiquities": "الآثار القبطية",
   "Greek and Roman Antiquities": "الآثار الرومانية",
-  "Pharaonic antiquities": "الاثار الفرعونية",
+  "Pharaonic antiquities": "الآثار الفرعونية",
   "Next": "التالي",
   "Go to it!": "إذهب إليه!",
   "Reserve!": "إحجز فيه!",
