--- a/assets/languages/en.json
+++ b/assets/languages/en.json
@@ -22,10 +22,10 @@
   "Torism Places": "Torism Places",
   "Hotels": "Hotels",
   "See More": "See More",
-  "Islamic antiquities": "Islamic antiquities",
-  "Coptic antiquities": "Coptic antiquities",
-  "Greek and Roman Antiquities": "Greek and Roman",
-  "Pharaonic antiquities": "Pharaonic antiquities",
+  "Islamic antiquities": "Islamic ِAntiquities",
+  "Coptic antiquities": "Coptic Antiquities",
+  "Greek and Roman Antiquities": "Greco-Roman",
+  "Pharaonic antiquities": "Pharaonic Antiquities",
   "Next": "Next",
   "Go to it!": "Go to it!",
   "Reserve!": "Reserve!",
